manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gausstalk-backend
  labels:
    app.kubernetes.io/component: gausstalk-backend
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 3        # how many pods we can add at a time
      maxUnavailable: 1  # maxUnavailable define how many pods can be unavailable
                         # during the rolling update
  selector:
    matchLabels:
      app.kubernetes.io/component: gausstalk-backend
  template:
    metadata:
      labels:
        app.kubernetes.io/component: gausstalk-backend
    spec:
      containers:
      - name: gausstalk-backend
        image: gausstalk.azurecr.io/gausstalk-backend
        ports:
        - containerPort: 8000
        resources:
          limits:
            memory: "1Gi"
            cpu: "1"
